api-not-working

--- a/sportsDB.html
+++ b/sportsDB.html
@@ -11,10 +11,23 @@
 
 </head>
 <body>
+
+    <h1 class="text-center p-5" >Sports DB</h1>
+
 <!--------------------------------------------------------------------------------- 
   ////////////////////////////// Search Field \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\  
  ---------------------------------------------------------------------------------->
+ <div class="input-group mx-auto w-50">
 
+    <input id="search" type="text" class="form-control" placeholder="Team Name" aria-label="Team Name" aria-describedby="button-addon2">
+
+    <button 
+    onclick="searchTeams();"
+    class="btn btn-outline-primary" type="button" id="button-addon2">Button
+
+    </button>
+
+  </div>
 <!--------------------------------------------------------------------------------- 
   ///////////////////////// Display Selected Team \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\  
  ---------------------------------------------------------------------------------->
@@ -22,7 +35,7 @@
 <!--------------------------------------------------------------------------------- 
   /////////////////////////////// Display All Teams \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\  
  ---------------------------------------------------------------------------------->
- 
+
 <!--------------------------------------------------------------------------------- 
   //////////////////////////// Bootstrap JS Bundle \\\\\\\\\\\\\\\\\\\\\\\\\\\\\  
  ---------------------------------------------------------------------------------->
