--- a/sportsDB.html
+++ b/sportsDB.html
@@ -35,7 +35,18 @@
 <!--------------------------------------------------------------------------------- 
   /////////////////////////////// Display All Teams \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\  
  ---------------------------------------------------------------------------------->
+  <div id="allTeams"
+      class="
+      row 
+      row-cols-1 
+      row-cols-lg-4 
+      row-cols-md-3 
+      row-cols-sm-2 
+      g-3 w-100 m-auto">
 
+   
+
+  </div>
 <!--------------------------------------------------------------------------------- 
   //////////////////////////// Bootstrap JS Bundle \\\\\\\\\\\\\\\\\\\\\\\\\\\\\  
  ---------------------------------------------------------------------------------->
