still-stuck-in-forEach

--- a/sportsDB.html
+++ b/sportsDB.html
@@ -31,18 +31,20 @@
 <!--------------------------------------------------------------------------------- 
   ///////////////////////// Display Selected Team \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\  
  ---------------------------------------------------------------------------------->
-
+  
+ <!-- Under Construction -->
+ 
 <!--------------------------------------------------------------------------------- 
   /////////////////////////////// Display All Teams \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\  
  ---------------------------------------------------------------------------------->
-  <div id="allTeams"
+  <div id="all-Teams"
       class="
       row 
       row-cols-1 
       row-cols-lg-4 
       row-cols-md-3 
       row-cols-sm-2 
-      g-3 w-100 m-auto">
+      g-3 w-100 mx-auto">
 
    
 
