--- a/sportsDB.html
+++ b/sportsDB.html
@@ -19,7 +19,7 @@
  ---------------------------------------------------------------------------------->
  <div class="input-group mx-auto w-50">
 
-    <input id="search" type="text" class="form-control" placeholder="Team Name" aria-label="Team Name" aria-describedby="button-addon2">
+    <input id="search" type="text" class="form-control" placeholder="" aria-label="" aria-describedby="button-addon2">
 
     <button 
     onclick="searchTeams();"
@@ -44,7 +44,7 @@
       row-cols-lg-4 
       row-cols-md-3 
       row-cols-sm-2 
-      g-3 w-100 mx-auto">
+      g-3 w-100 mt-2 mx-auto">
 
    
 
