no-result-error

--- a/sportsDB.html
+++ b/sportsDB.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <h1 class="text-center p-5" >Sports DB</h1>
+    <h1 class="text-center p-5" >SPORTS DB</h1>
 
 <!--------------------------------------------------------------------------------- 
   ////////////////////////////// Search Field \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\  
@@ -29,6 +29,14 @@
 
   </div>
 <!--------------------------------------------------------------------------------- 
+  ///////////////////////// No Result \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\  
+ ---------------------------------------------------------------------------------->
+
+  <div id="no-result" class="container"> </div>
+          
+  
+ <br>
+<!--------------------------------------------------------------------------------- 
   ///////////////////////// Display Selected Team \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\  
  ---------------------------------------------------------------------------------->
   
@@ -37,18 +45,17 @@
 <!--------------------------------------------------------------------------------- 
   /////////////////////////////// Display All Teams \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\  
  ---------------------------------------------------------------------------------->
-  <div id="all-Teams"
+  <div class="container">
+    <section id="all-Teams"
       class="
       row 
       row-cols-1 
       row-cols-lg-4 
       row-cols-md-3 
       row-cols-sm-2 
-      g-3 w-100 mt-2 mx-auto">
-
-   
-
+      g-3 w-100 mt-2 mx-auto">  </section>
   </div>
+
 <!--------------------------------------------------------------------------------- 
   //////////////////////////// Bootstrap JS Bundle \\\\\\\\\\\\\\\\\\\\\\\\\\\\\  
  ---------------------------------------------------------------------------------->
