second-section-solved

--- a/sportsDB.html
+++ b/sportsDB.html
@@ -32,10 +32,8 @@
   ///////////////////////// No Result \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\  
  ---------------------------------------------------------------------------------->
 
-  <div id="no-result" class="container"> </div>
-          
-  
- <br>
+  <div id="no-result"> </div>
+ 
 <!--------------------------------------------------------------------------------- 
   ///////////////////////// Display Selected Team \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\  
  ---------------------------------------------------------------------------------->
