--- a/sportsDB.html
+++ b/sportsDB.html
@@ -38,7 +38,10 @@
   ///////////////////////// Display Selected Team \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\  
  ---------------------------------------------------------------------------------->
   
- <!-- Under Construction -->
+ <div id="particular-team">
+  
+</div>
+ 
  
 <!--------------------------------------------------------------------------------- 
   /////////////////////////////// Display All Teams \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\  
