--- a/sportsDB.html
+++ b/sportsDB.html
@@ -38,10 +38,11 @@
   ///////////////////////// Display Selected Team \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\  
  ---------------------------------------------------------------------------------->
   
- <div id="particular-team">
+ <div id="particular-team" class="w-50 mx-auto p-5">
   
 </div>
  
+
  
 <!--------------------------------------------------------------------------------- 
   /////////////////////////////// Display All Teams \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\  
